# bake-loose

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20251221170317_create_projects.sql  20260110100001_create_trials.sql  20260110100002_create_steps.sql  20260110100003_create_parameters.sql  20260113100000_alter_steps_started_at_not_null.sql  20260228000000_create_trials.sql
backend/src/: constant.rs  domain.rs  lib.rs  main.rs  ports.rs  presentation.rs  repository.rs  use_case.rs
backend/src/constant/: env.rs
backend/src/domain/: actions.rs  models.rs  validators.rs
backend/src/domain/actions/: trial.rs
backend/src/domain/models/: duration.rs  parameter.rs  project.rs  step.rs  time_unit.rs  trial.rs  utils.rs
backend/src/domain/validators/: trial.rs
backend/src/infrastructure/: database.rs
backend/src/ports/: error.rs  project_repository.rs  sort.rs  trial_repository.rs  unit_of_work.rs
backend/src/presentation/: graphql.rs
backend/src/presentation/graphql/: context.rs  error.rs  mutation.rs  query.rs  schema.rs  types.rs
backend/src/repository/: executor.rs  models.rs  pg_unit_of_work.rs  project_repo.rs  trial_repo.rs
backend/src/repository/models/: project_row.rs  trial_row.rs
backend/src/use_case/: project.rs  test.rs  trial.rs
backend/src/use_case/project/: create_project.rs  get_project.rs  (+1 more)
backend/tests/: graphql.rs
backend/tests/fixtures/: projects.sql  trials.sql
backend/tests/graphql/: projects.rs  request.rs  schema.rs  test_data.rs  trial.rs
(+233 files in other folders)
