[package]
name = "bake-loose"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# GraphQL
async-graphql = "7"
async-graphql-axum = "7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async
async-trait = "0.1"

# Error Handling
thiserror = "2"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["test-util", "macros"] }
