[package]
name = "bake-loose"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# GraphQL
async-graphql = "7"
async-graphql-axum = "7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["test-util", "macros"] }
